--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div class="wrapper flex">
 		<div class="content flex">
 			<div class="content__image">
-				<img class="content__image-walle" src="/images/wall-e.png" alt="">
+				<img class="content__image-walle" src="/wall-e/images/wall-e.png" alt="">
 			</div>
 		</div>
 		<footer class="footer flex">
